test-pipeline/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: httpd
  labels:
    app: httpd
spec:
  host: httpd-test-pipeline.apps.cluster-bvn5v.bvn5v.sandbox1979.opentlc.com
  to:
    kind: Service
    name: httpd
    weight: 100
  port:
    targetPort: 80
  tls:
    termination: edge
  wildcardPolicy: None
